# swift-numerics

./: Package.resolved  Package.swift
Sources/IntegerUtilities/: LeastCommonMultiple.swift
Sources/RationalModule/: CMakeLists.txt  README.md  Rational.swift
Tests/IntegerUtilitiesTests/: CMakeLists.txt  GreatestCommonDivisorTests.swift  LeastCommonMultipleTests.swift
Tests/RationalTests/: CMakeLists.txt  RationalTests.swift
